// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`'--listFiles' command line option lists test files: stdout 1`] = `
"[
  "<<cwd>>/tests/__fixtures__/.generated/config-listFiles/__typetests__/isNumber.tst.ts",
  "<<cwd>>/tests/__fixtures__/.generated/config-listFiles/__typetests__/isString.tst.ts"
]
"
`;

exports[`'--listFiles' command line option when 'testFileMatch' is specified as an empty list: stdout 1`] = `
"Targets:    1 passed, 1 total
Test files: 0 total
Duration:   <<timestamp>>

Ran all test files.
"
`;

exports[`'--listFiles' command line option when search string is specified after the option: stdout 1`] = `
"[
  "<<cwd>>/tests/__fixtures__/.generated/config-listFiles/__typetests__/isString.tst.ts"
]
"
`;

exports[`'--listFiles' command line option when search string is specified before the option: stdout 1`] = `
"[
  "<<cwd>>/tests/__fixtures__/.generated/config-listFiles/__typetests__/isNumber.tst.ts"
]
"
`;
